fix wrapping buttons.

--- a/example/download-style.css
+++ b/example/download-style.css
@@ -5,7 +5,7 @@
   border-width: 0px;
 }
 .dcgiHideShowButton {
-  margin: 5px;
+  margin: 1px;
   padding: 2px 5px 2px 5px;
   background-color: #ccf;
   border-width: 2px;
@@ -14,6 +14,8 @@
   border-radius: 15px;
   font-size: .8em;
   cusror: pointer;
+  white-space: nowrap;
+  display: inline-block;
 }
 .dcgiButtonBarTitle {
   font-size: 1.5em;
